# max-externals

./: .gitignore
copyfct~/: CMakeLists.txt  README.md  copyfct~.c  curve.h  pd.h
greg/: CMakeLists.txt  README.md  atom.h  greg.cpp  msg_data.h  test.c
mc.rotate~/: CMakeLists.txt  README.md  mc.rotate~.c
mc.scramble~/: CMakeLists.txt  README.md  mc.scramble~.c
ntel~/: CMakeLists.txt  README.md  ntel~.c
